2010-12-14  Richard Henderson  <rth@redhat.com>

	* config/x86/tls.h: New file.

2010-07-15  Richard Henderson  <rth@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Add -funwind-tables.
	* Makefile.in: Rebuild.

2010-07-13  Aldy Hernandez  <aldyh@redhat.com>

	* method-wbetl.cc (trydropreference): Fix source line.

2010-07-13  Aldy Hernandez  <aldyh@redhat.com>

	* libitm.h: Add comment.
	* libitm_i.h (begin_transaction): Add ITM_REGPARM.

2010-07-07  Aldy Hernandez  <aldyh@redhat.com>

	* configure.ac: Call LIBITM_CHECK_64BIT_SYNC_BUILTINS.
	* beginend.cc (begin_transaction): If 64-bit sync builtins are not
	available, use pthread mutexes.
	* acinclude.m4 (LIBITM_CHECK_64BIT_SYNC_BUILTINS): New.
	* config.h.in: Regenerate.
	* configure: Regenerate.

2010-07-06  Aldy Hernandez  <aldyh@redhat.com>

	* libitm.h (ITM_PURE): Define.
	Declare _ITM_malloc, _ITM_calloc, and _ITM_free.

2010-06-28  Aldy Hernandez  <aldyh@redhat.com>

	* method-wbetl.cc (class wbetl_dispatch): Add trydropreference.
	(validate): Add comment.
	(trydropreference): New.
	* method-readonly.cc (class readonly_dispatch): Add
	trydropreference.
	* alloc_c.cc (_ITM_dropReferences): Remove const attribute.
	Call trydropreference().
	* libitm.h (_ITM_dropReferences): Remove const attribute.
	* method-serial.cc (class serial_dispatch): Add trydropreference.
	* libitm_i.h (struct gtm_dispatch): Add trydropreference.

2010-06-28  Aldy Hernandez  <aldyh@redhat.com>

	* memcpy.cc (do_memcpy): Comment.

2010-06-25  Aldy Hernandez  <aldyh@redhat.com>

	* barrier.tpl: Add comments throughout.

2010-06-24  Aldy Hernandez  <aldyh@redhat.com>

	* method-wbetl.cc (struct w_entry): Add comments.
	(trycommit): Same.
	(rollback): Same.

2010-06-24  Aldy Hernandez  <aldyh@redhat.com>

	* alloc_c.cc (_ITM_dropReferences): New.
	* libitm.map (_ITM_dropReferences): Add.
	* libitm.h (_ITM_dropReferences): Add transaction_pure attribute.
	* libitm_i.h (struct gtm_transaction): Declare